--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <div class="bg-basic mx-8 md:mx-28 p-4 md:px-8">
     <h2 class="text-accent font-raleway text-center text-3xl md:text-5xl mb-5 md:mb-10">On The Surface</h2>
     <div id="carousel" class="carousel flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0 gap-5">
-        <div class="carousel-item active w-full flex flex-col md:flex-row items-center gap-4 md:gap-10">
+        <div class="carousel-item active w-full flex flex-col md:flex-row items-top gap-4 md:gap-10">
             <div class="w-full h-64">
-                <img src="./img/DotsOverNinety.png" alt="Carousel Image 1" class="w-full h-full object-cover">
+                <img src="./img/stepdials.avif" alt="Carousel Image 1" class="w-full h-full object-cover">
             </div>
             <div class="w-full">
                 <h2 class="text-accent text-3xl md:text-3xl mb-3">Step Dials</h2>
@@ -63,9 +63,9 @@
             </div>
         </div>
         
-        <div class="carousel-item w-full flex flex-col md:flex-row items-center gap-4 md:gap-10">
+        <div class="carousel-item active w-full flex flex-col md:flex-row items-top gap-4 md:gap-10">
             <div class="w-full md:w-1/2 h-64">
-                <img src="./img/StepDials.png" alt="Carousel Image 2" class="w-full h-full object-cover">
+                <img src="./img/DotsOverNinety.png" alt="Carousel Image 2" class="w-full h-full object-cover">
             </div>
             <div class="w-full md:w-1/2">
                 <h2 class="text-accent text-3xl md:text-3xl mb-3">Dot Over Ninety</h2>
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="hidden md:flex justify-end space-x-2 mt-6">
+    <div class="hidden justify-end space-x-2 mt-6">
         <button id="prevBtn" class="bg-basic-dark hover:bg-accent text-white px-4 py-2">&lt;</button>
         <button id="nextBtn" class="bg-basic-dark hover:bg-accent text-white px-4 py-2">&gt;</button>
     </div>
